# ChangeLog for x11-misc/zim
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/zim/ChangeLog,v 1.22 2013/05/31 15:22:57 xmw Exp $

*zim-0.60 (31 May 2013)

  31 May 2013; Michael Weber <xmw@gentoo.org>
  +files/zim-0.60-remove-ubuntu-theme.patch, +zim-0.60.ebuild:
  Version bump (bug 459612, thanks Alastair Murray and poncho)

*zim-0.57 (13 Dec 2012)

  13 Dec 2012; Jeroen Roovers <jer@gentoo.org> -zim-0.54.ebuild,
  -zim-0.55.ebuild, +zim-0.57.ebuild:
  Version bump by poncho (bug #447098).

*zim-0.56 (07 Jun 2012)

  07 Jun 2012; Michael Weber <xmw@gentoo.org> +zim-0.56.ebuild:
  Version bump (bug 410783 reported by bdouxx)

*zim-0.55 (04 Jun 2012)

  04 Jun 2012; Michael Weber <xmw@gentoo.org> +zim-0.55.ebuild,
  -zim-0.53.ebuild:
  Version bump (bug 406589, thanks Samuel BAUER)

  13 Apr 2012; Ulrich Müller <ulm@gentoo.org> zim-0.53.ebuild,
  zim-0.54.ebuild, metadata.xml:
  Move EAPI assignment to top of ebuild, bug 411875. Remove unused screenshot
  local USE flag from metadata.

*zim-0.54 (29 Jan 2012)

  29 Jan 2012; Michael Weber <xmw@gentoo.org> -zim-0.52.ebuild,
  +zim-0.54.ebuild:
  Version bump, remove old version

  19 Nov 2011; Tim Harder <radhermit@gentoo.org> metadata.xml:
  Wrap long lines and fix whitespace.

*zim-0.53 (17 Nov 2011)

  17 Nov 2011; Michael Weber <xmw@gentoo.org> -zim-0.28.ebuild,
  -files/zim-0.28-disable-updates.patch, -zim-0.46.ebuild,
  -files/zim-0.46-disable-updates.patch, -zim-0.47.ebuild, +zim-0.53.ebuild:
  Version bump (thanks to Alastair Murray for the report bug 390773), drop use
  flags, remove old versions.

  24 Oct 2011; Alexandre Rostovtsev <tetromino@gentoo.org> zim-0.46.ebuild:
  Depend on correct slot of pygobject.

*zim-0.52 (30 May 2011)

  30 May 2011; Michael Weber <xmw@gentoo.org> +zim-0.52.ebuild:
  Version bump, thanks to Alastair Murray for his report on bug 368971

  02 Mar 2011; Kevin McCarthy <signals@gentoo.org> zim-0.28.ebuild,