@@ -1,1 +1,1 @@
-DIST zim-0.60.tar.gz 1634256 SHA256 1093f7bf0051eda8eaad33f037b03df66b30c24da275d59cedbf8f792011196b SHA512 93ce880d9364990d83d1a6e9d7651cde3257ed2cc0b01bdeb7d60374b4e56b86bda7a6c1015cbf773dea705ac7c8dffdcf7a639ccb936e0f2008d4dad8668513 WHIRLPOOL bac69fa0034603b504cabf26275249c9a9371bb8e2aa9b6091996d2a463283c9af6c7b70f6b44938dd1405ce949dad7cf5954860d4d0c5eb0043d83c0f40375a
+DIST zim-0.61.tar.gz 1733251 SHA256 5843a9b2fb41f153b7b628732ac157889709b9937b4921c05099af81dceccc4a SHA512 381f1d740bedaecf52c4b7178e7ac17aac98971cc5292476396a28b965b93195a2e07e55f7872048b3577123cd6afb44c2a0e2dee220b02a84fed2a13fb67f61 WHIRLPOOL d0f9d8ce65e8970226f8878cc4e89d228c76e06f9772692d7bc3653b4fc85b4b9ed22d2b0aa91aa724384062a4b1b93859594089c9b1799c2eded313cea7deba
