@@ -1,4 +1,4 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/x11-misc/zim/zim-0.60.ebuild,v 1.1 2013/05/31 15:22:57 xmw Exp $
 
@@ -27,7 +27,7 @@ DEPEND="${RDEPEND}
 		dev-vcs/git
 		dev-vcs/mercurial )"
 
-PATCHES=( "${FILESDIR}"/${P}-remove-ubuntu-theme.patch )
+PATCHES=( "${FILESDIR}"/${PN}-0.60-remove-ubuntu-theme.patch )
 
 python_prepare() {
 	sed -i -e "s/'USER'/'LOGNAME'/g" zim/__init__.py zim/fs.py || die
