@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/zim
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/x11-misc/zim/ChangeLog,v 1.22 2013/05/31 15:22:57 xmw Exp $
+
+*zim-0.61 (10 Aug 2014)
+
+  10 Aug 2014; Poncho <poncho@spahan.ch> +zim-0.61.ebuild, -zim-0.60.ebuild,
+  metadata.xml:
+  x11-misc/zim: version bump
 
 *zim-0.60 (31 May 2013)
 
